# Hermes

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: app.yaml  logging.yaml  memory.yaml  model.yaml  rag.yaml  safety.yaml  voice.yaml
docs/: ARCHITECTURE.md  CHAT.md  CLOUD_API_ISOLATION.md  COMMANDS.md  DESIGN.md  IDEA.md  MEMORY.md  RAG.md  REQUIREMENTS.md  ROADMAP.md  SAFETY.md  SWIFT_NATIVE_APP.md  TASKS.md  TESTING_STRATEGY.md  TRACEABILITY.md  VOICE.md
docs/features/: 00_foundation.md  01_text_chat_assistant.md  02_voice_interaction_skeleton.md
logs/: README.md
memory/: core.md  memory_map.md  preferences.md  projects.md  working_context.md
resources/: README.md
resources/cloud_resources/: README.md
schemas/: action_policy_schema.md  chat_message_schema.md  command_schema.md  context_delta_schema.md  conversation_schema.md  design_schema.md  feature_doc_schema.md  rag_resource_schema.md  requirements_schema.md  task_schema.md  traceability_schema.md
scripts/: init_repo.sh  run_dev.sh
src/local_mac_agent/: __init__.py  logging_utils.py  main.py  paths.py  safety.py  settings.py  timing.py
src/local_mac_agent/chat/: __init__.py  context.py  conversation_store.py  llm.py  service.py
src/local_mac_agent/voice/: __init__.py  service.py
state/: README.md
tests/: test_chat_context.py  test_chat_llm.py  test_chat_service.py  test_conversation_store.py  test_logging_utils.py  test_paths.py  test_safety.py  test_settings.py  test_voice_service.py
