[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-mac-agent"
version = "0.1.0"
description = "Local-first macOS assistant foundation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "pydantic",
  "pydantic-settings",
  "PyYAML",
  "numpy",
  "sounddevice",
  "openai-whisper",
  "openwakeword",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
local-mac-agent = "local_mac_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
